--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
  2.1 Хедер
  2.2 Мейн
   2.2.1 Герой
+    2.2.1.1 Модальное окно
   2.2.2 Преимущества
   2.2.3 Профиль работы
   2.2.4 Команда
@@ -233,6 +234,9 @@ header > .container {
 .main-button:focus {
   background-color: var(--focus-btnclr);
 }
+
+/* 2.2.2.1 Модальное окно */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -254,11 +258,14 @@ header > .container {
 }
 .modal {
   position: relative;
+  display: flex;
+  flex-direction: column;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) scale(1);
   width: 528px;
   height: 581px;
+  padding: 40px;
   background-color: var(--mainbcg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -268,7 +275,7 @@ header > .container {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal > button {
+.modal > .close-button {
   position: absolute;
   top: 8px;
   right: 8px;
